# Stock_forecast

./: .gitignore  README.md  debug_alpaca.py  docs.md  pyproject.toml  requirements.txt  start_dev.sh
backend/: main.py
backend/api/: routes.py
backend/db/: database.py  models.py
backend/services/: historical.py
backend/tests/: test_alignment.py  test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfidenceGauge.tsx  PerformanceChart.tsx  RetrainButton.tsx  SectorComparison.tsx  StockCard.tsx
model/: analyze_sector_data.py  dataset.py  fetch_sector_data.py  finetune_timer.py  hyperparameter_test.py  plot_metrics.py  report.md  train.sh
